--- a/frontend/src/modules/components/Navbar/Navbar.module.css
+++ b/frontend/src/modules/components/Navbar/Navbar.module.css
@@ -1,9 +1,19 @@
 .navbarContainer {
     display: flex;
     align-items: center;
-    justify-content: space-between;
     height: 10vh;
-    padding: 8px 50px;
+    position: fixed;
+    width: 100vw;
+    top: 0;
+    left: 0;
+    background-color: #fff;
+    padding: 10px 30px;
+    z-index: 1000;
+}
+
+.navWrapper{
+    display: flex;
+    width: 100%;
 }
 
 .navbarLeftCol {
@@ -18,7 +28,8 @@
     display: flex;
     width: 100%;
     align-items: center;
-    justify-content: space-between;
+    justify-content: center;
+    gap: 30px;
 }
 
 .navbarLogo {
