--- a/frontend/src/modules/components/Navbar/Navbar.module.css
+++ b/frontend/src/modules/components/Navbar/Navbar.module.css
@@ -7,11 +7,12 @@
     top: 0;
     left: 0;
     background-color: #fff;
-    padding: 10px 30px;
+    padding: 10px;
     z-index: 1000;
 }
 
 .navWrapper{
+    padding: 0px 40px;
     display: flex;
     width: 100%;
 }
