day2-dev_stage7

--- a/frontend/src/modules/components/About/About.module.css
+++ b/frontend/src/modules/components/About/About.module.css
@@ -1,5 +1,6 @@
 .aboutContainer {
-    padding: 40px;
+    margin-top: 40px;
+    padding: 50px 80px;
     display: flex;
     flex-direction: column;
 }
