--- a/frontend/src/App.module.css
+++ b/frontend/src/App.module.css
@@ -26,3 +26,13 @@
     background-color: #f0f0f0;
     /* Color of the track (scrollbar background) */
 }
+
+html {
+    scroll-behavior: smooth;
+  }
+
+  a{
+    text-decoration: none;
+    color: black;
+  }
+  
