--- a/frontend/src/modules/Pages/MainPage/MainPage.module.css
+++ b/frontend/src/modules/Pages/MainPage/MainPage.module.css
@@ -18,6 +18,7 @@
     align-items: center;
     justify-content: center;
     display: flex;
+    background-color: #fff;
     border-radius: 10px;
     border: 1px solid blue;
     color: blue;
