--- a/frontend/src/modules/components/Navbar/Navbar.module.css
+++ b/frontend/src/modules/components/Navbar/Navbar.module.css
@@ -1,13 +1,14 @@
 .navbarContainer {
     display: flex;
     align-items: center;
-    height: 10vh;
+    justify-content: center;
+    height: 8vh;
     position: fixed;
     width: 100vw;
     top: 0;
     left: 0;
     background-color: #fff;
-    padding: 10px;
+    padding: 20px 10px;
     z-index: 1000;
 }
 
@@ -81,6 +82,7 @@
     display: flex;
     align-items: center;
     justify-content: start;
+    gap: 10px;
     width: 100%;
 }
 
