--- a/frontend/src/modules/components/Banner/Banner.module.css
+++ b/frontend/src/modules/components/Banner/Banner.module.css
@@ -7,6 +7,7 @@
 @media (max-width: 768px) {
     .bannerContainer {
         height: 30vh;
+        margin-top: 3.3rem;
         display: flex;
     }
 }
