--- a/frontend/src/modules/Pages/MainPage/MainPage.module.css
+++ b/frontend/src/modules/Pages/MainPage/MainPage.module.css
@@ -12,6 +12,16 @@
     margin-bottom: 20px;
 }
 
+@media (max-width: 768px) {
+    .eventContainer {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        padding: 10px ;
+        margin-bottom: 20px;
+    }
+}
+
 .eventBtn {
     width: 15%;
     padding: 15px;
@@ -26,6 +36,24 @@
     font-size: 20px;
     cursor: pointer;
     transition: all 1.ms ease;
+}
+
+@media (max-width: 768px) {
+    .eventBtn {
+        width: 84%;
+        padding: 15px;
+        align-items: center;
+        justify-content: center;
+        display: flex;
+        background-color: #fff;
+        border-radius: 10px;
+        border: 1px solid blue;
+        color: blue;
+        text-transform: capitalize;
+        font-size: 20px;
+        cursor: pointer;
+        transition: all 1.ms ease;
+    }
 }
 
 .eventBtn:hover {
