--- a/frontend/src/modules/components/Navbar/Navbar.module.css
+++ b/frontend/src/modules/components/Navbar/Navbar.module.css
@@ -17,7 +17,7 @@
         padding: 0px;
         position: fixed;
         height: auto;
-        width: 95;
+        width: 100vw;
         top: 0;
         left: 0;
         background-color: #fff;
