--- a/frontend/src/modules/components/Navbar/Navbar.module.css
+++ b/frontend/src/modules/components/Navbar/Navbar.module.css
@@ -50,7 +50,7 @@
 
 @media (max-width: 768px) {
     .navWrapper {
-        padding: 0px 5px;
+        padding: 6px 5px 0px;
         width: 100%;
         height: 100%;
     }
