--- a/frontend/src/modules/components/Navbar/Navbar.module.css
+++ b/frontend/src/modules/components/Navbar/Navbar.module.css
@@ -33,7 +33,7 @@
     position: fixed;
     height: 100%;
     width: 100%;
-    width: 95;
+    width: 100vw;
     top: 0;
     left: 0;
     background-color: #fff;
@@ -60,7 +60,7 @@
     display: flex;
     flex-direction: column;
     width: 100%;
-    padding: 0px 5px;
+    padding: 6px 5px 0px;
     height: 100%;
 }
 
