--- a/frontend/src/modules/components/Navbar/Navbar.module.css
+++ b/frontend/src/modules/components/Navbar/Navbar.module.css
@@ -2,9 +2,9 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 8vh;
+    height: 9vh;
     position: fixed;
-    width: 95;
+    width: 100vw;
     top: 0;
     left: 0;
     background-color: #fff;
@@ -46,6 +46,7 @@
     padding: 0px 40px;
     display: flex;
     width: 100%;
+    height: 100%;
 }
 
 @media (max-width: 768px) {
