--- a/frontend/src/modules/components/Navbar/Navbar.module.css
+++ b/frontend/src/modules/components/Navbar/Navbar.module.css
@@ -61,7 +61,7 @@
     display: flex;
     flex-direction: column;
     width: 100%;
-    padding: 6px 5px 0px;
+    padding: 9px  0px 0px 5px;
     height: 100%;
 }
 
