--- a/frontend/src/components/Navbar/Navbar.module.css
+++ b/frontend/src/components/Navbar/Navbar.module.css
@@ -1,9 +1,9 @@
 .navbarContainer {
-    border-bottom: 1px solid rgb(236, 236, 236);
     position: fixed;
     display: flex;
     height: 14vh;
-    width: 100vw;
+    background-color: #fff;
+    width: 100%;
 }
 
 .navbarWrapper {
@@ -34,7 +34,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 100%;
+    height: 80%;
     width: 100%;
     position: relative;
     cursor: pointer;
