--- a/frontend/src/modules/HomePage/HomePage.module.css
+++ b/frontend/src/modules/HomePage/HomePage.module.css
@@ -47,7 +47,7 @@
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 
-.studentsBranch:hover{
+.studentsBranch:hover {
     background-color: green;
     color: #fff;
 }
@@ -66,7 +66,7 @@
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 
-.csSociety:hover{
+.csSociety:hover {
     background-color: blue;
     color: #fff;
 }
@@ -74,4 +74,41 @@
 .txt {
     font-weight: 500;
     font-size: 1.4rem;
+}
+
+.eventsContainer {
+    display: flex;
+    flex-direction: column;
+    margin: 4rem 3rem;
+}
+
+.eventTitle {
+    font-size: 1.6rem;
+    font-weight: 500;
+}
+
+.eventsBox {
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: 2rem;
+    gap: 0.1rem;
+    justify-content: space-between;
+}
+
+.eventItem {
+    width:30%;
+    display: flex;
+    flex-direction: column;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    border-radius: 10px ;
+}
+
+.eventPic {
+    width: 100%;
+    height: 100%;
+    border-radius: 8px;
+}
+
+.eventName{
+    font-size: 1.1rem;
 }
