--- a/frontend/src/modules/HomePage/HomePage.module.css
+++ b/frontend/src/modules/HomePage/HomePage.module.css
@@ -1,5 +1,5 @@
 .homeContainer {
-    height: 100vh;
+    height: 100%;
     display: flex;
     flex-direction: column;
 }
@@ -89,10 +89,11 @@
 
 .eventsBox {
     display: flex;
-    flex-wrap: wrap;
     margin-top: 2rem;
-    gap: 0.1rem;
-    justify-content: space-between;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 2.7rem;
+    flex-wrap: wrap;
+    justify-content: center;
 }
 
 .eventItem {
