--- a/frontend/src/components/About/About.module.css
+++ b/frontend/src/components/About/About.module.css
@@ -5,6 +5,15 @@
     margin-top: 6rem;
 }
 
+@media only screen and (max-width: 767px) {
+    .AboutContainer{
+        display: flex;
+        flex-direction: column;
+        margin: 2rem 2rem;
+        margin-top: 6rem;
+    }
+}
+
 .aboutTitle{
     font-size: 1.6rem;
     font-weight: 500;
@@ -17,11 +26,30 @@
     margin-top: 2rem;
 }
 
+@media only screen and (max-width: 767px) {
+    .aboutRow{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin-top: 2rem;
+        gap: 4rem;
+        flex-direction: column;
+    }
+}
+
 .aboutLeft{
     display: flex;
     align-items: center;
     justify-content: center;
     flex: 8;
+}
+
+@media only screen and (max-width: 767px) {
+    .aboutLeft{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
 }
 
 .aboutRight{
@@ -36,4 +64,14 @@
     text-align: justify;
     letter-spacing: 1px;
     font-weight: normal;
+}
+
+@media only screen and (max-width: 767px) {
+    .aboutTxt{
+        font-size: 1rem;
+        text-align: justify;
+        letter-spacing: 1px;
+        font-weight: normal;
+    }
+    
 }
