--- a/frontend/src/components/Navbar/Navbar.module.css
+++ b/frontend/src/components/Navbar/Navbar.module.css
@@ -7,11 +7,32 @@
     z-index: 9999;
 }
 
+@media only screen and (max-width: 767px) {
+    .navbarContainer {
+        position: fixed;
+        display: flex;
+        height: 9vh;
+        background-color: #fff;
+        border-bottom: 1px solid red;
+        width: 100%;
+        z-index: 9999;
+    }
+}
+
 .navbarWrapper {
     margin: 0 3rem;
     align-items: center;
     display: flex;
     width: 100%;
+}
+
+@media only screen and (max-width: 767px) {
+    .navbarWrapper {
+        margin: 0 0.5rem;
+        align-items: center;
+        display: flex;
+        width: 100%;
+    }
 }
 
 .navbarLeft{
@@ -21,6 +42,7 @@
     flex: 6;
 }
 
+
 .navbarRight{
     display: flex;
     align-items: center;
@@ -29,6 +51,18 @@
     flex: 6;
     width: 100%;
     height: 100%;
+}
+
+@media only screen and (max-width: 767px) {
+    .navbarRight{
+        display: none;
+        align-items: center;
+        justify-content: end;
+        gap: 2rem;
+        flex: 6;
+        width: 100%;
+        height: 100%;
+    }
 }
 
 .navbarItemRight{
@@ -56,6 +90,12 @@
 
 .logo{
     height:4.5rem;
+}
+
+@media only screen and (max-width: 767px) {
+    .logo{
+        height:2.8rem;
+    }
 }
 
 .navLink{
