--- a/frontend/src/components/Banner/Banner.module.css
+++ b/frontend/src/components/Banner/Banner.module.css
@@ -1,4 +1,4 @@
-.bannerContainer{
+.bannerContainer {
     margin-top: 13.9vh;
     height: 100vh;
     width: 100%;
@@ -6,13 +6,32 @@
     flex-direction: column;
 }
 
-.bannerImg{
+@media only screen and (max-width: 767px) {
+    .bannerContainer {
+        margin-top: 6.4vh;
+        height: 90vh;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+    }
+}
+
+.bannerImg {
     height: 100%;
     width: 100%;
     object-fit: cover;
 }
 
-.BannerTxtBox{
+@media only screen and (max-width: 767px) {
+    .bannerImg {
+        height: 100%;
+        width: 100%;
+        background-position: center;
+        object-fit: cover;
+    }
+}
+
+.BannerTxtBox {
     position: absolute;
     bottom: -50px;
     display: flex;
@@ -29,7 +48,43 @@
     /* box-shadow: 0 0 10px rgba(0, 0, 0, 0.3); */
 }
 
-.ieee{
+@media only screen and (max-width: 767px) {
+    .BannerTxtBox {
+        position: absolute;
+        bottom: 10rem;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        left: 50%;
+        width: 90%;
+        transform: translateX(-50%);
+        background-color: rgba(15, 0, 51, 0.096);
+        padding: 20px;
+        border-radius: 8px;
+        backdrop-filter: blur(5px);
+        /* box-shadow: 0 0 10px rgba(0, 0, 0, 0.3); */
+    }
+
+}
+
+.row {
+    display: flex;
+    gap: 1rem;
+    align-items: center;
+    justify-content: center;
+}
+
+@media only screen and (max-width: 767px) {
+    .row {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+}
+
+.ieee {
     text-transform: capitalize;
     letter-spacing: 0.5rem;
     color: hsla(0, 0%, 100%, 0.979);
@@ -37,9 +92,44 @@
     font-weight: 800;
 }
 
-.collegeName{
+@media only screen and (max-width: 767px) {
+    .ieee {
+        text-transform: capitalize;
+        letter-spacing: 0.5rem;
+        color: hsla(0, 0%, 100%, 0.979);
+        font-size: 1.2rem;
+        flex-wrap: nowrap;
+        font-weight: 800;
+    }
+}
+
+.collegeName {
     font-size: 1rem;
     letter-spacing: 0.5rem;
     font-weight: 600;
     color: #FFF;
+}
+
+@media only screen and (max-width: 767px) {
+    .collegeName {
+        font-size: 0.8rem;
+        letter-spacing: 0.5rem;
+        font-weight: 600;
+        color: #FFF;
+        display: none;
+    }
+}
+
+.collegeNameCCET{
+    display: none;
+}
+
+@media only screen and (max-width: 767px) {
+    .collegeNameCCET{
+        font-size: 0.8rem;
+        letter-spacing: 0.5rem;
+        font-weight: 600;
+        color: #FFF;
+        display: flex;
+    }
 }
