--- a/frontend/src/modules/EventsPage/EventsPage.module.css
+++ b/frontend/src/modules/EventsPage/EventsPage.module.css
@@ -9,6 +9,14 @@
     width: 100%;
 }
 
+@media only screen and (max-width: 767px) {
+    .wrapper {
+        margin-top: 10vh;
+        width: 100%;
+    }
+    
+}
+
 
 .wrap {
     display: flex;
@@ -17,6 +25,17 @@
     align-items: center;
     justify-content: center;
     gap: 1rem;
+}
+
+@media only screen and (max-width: 767px) {
+    .wrap {
+        display: flex;
+        flex-direction: column;
+        margin: 1.4rem 1rem;
+        align-items: center;
+        justify-content: center;
+        gap: 1rem;
+    }
 }
 
 .eventsRow{
@@ -29,4 +48,12 @@
 .eventTitle{
     font-size: 1.9rem;
     font-weight: 700;
+}
+
+@media only screen and (max-width: 767px) {
+    .eventTitle{
+        font-size: 1.5rem;
+        font-weight: 600;
+        letter-spacing: 1px;
+    }
 }
