--- a/frontend/src/components/Navbar/Navbar.module.css
+++ b/frontend/src/components/Navbar/Navbar.module.css
@@ -7,13 +7,13 @@
     z-index: 9999;
 }
 
+
 @media only screen and (max-width: 767px) {
     .navbarContainer {
         position: fixed;
         display: flex;
-        height: 9vh;
+        height: 10vh;
         background-color: #fff;
-        border-bottom: 1px solid red;
         width: 100%;
         z-index: 9999;
     }
@@ -35,42 +35,51 @@
     }
 }
 
-.navbarLeft{
+.navbarItem {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.navbarLeft {
     display: flex;
     align-items: center;
     justify-content: start;
     flex: 6;
 }
 
+@media only screen and (max-width: 767px) {
+    .navbarLeft {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        flex: 6;
+    }
+}
 
-.navbarRight{
+.navbarRight {
     display: flex;
     align-items: center;
     justify-content: end;
-    gap: 2rem;
+    gap:1.8rem;
     flex: 6;
     width: 100%;
     height: 100%;
 }
 
 @media only screen and (max-width: 767px) {
-    .navbarRight{
+    .navbarRight {
         display: none;
-        align-items: center;
-        justify-content: end;
-        gap: 2rem;
-        flex: 6;
-        width: 100%;
-        height: 100%;
     }
 }
 
-.navbarItemRight{
+.navbarItemRight {
     display: flex;
     align-items: center;
     justify-content: center;
     height: 80%;
-    width: 15%;
+    width: auto;
+    flex-wrap: nowrap;
     position: relative;
     cursor: pointer;
 }
@@ -84,22 +93,117 @@
     border-bottom: 3px solid blue;
 }
 
-.navbarItemRight:hover .navLink{
+.navbarItemRight:hover .navLink {
     color: blue;
 }
 
-.logo{
-    height:4.5rem;
+.logo {
+    height: 4.5rem;
 }
 
 @media only screen and (max-width: 767px) {
-    .logo{
-        height:2.8rem;
+    .logo {
+        height: 3rem;
     }
 }
 
-.navLink{
-    font-size: 1.2em;
+.navLink {
+    font-size: 1.1em;
     font-weight: 500;
     text-transform: capitalize;
+}
+
+.icon {
+    display: none;
+}
+
+@media only screen and (max-width: 767px) {
+    .icon {
+        font-size: 1.62rem;
+        display: block;
+        margin-right: 0.5rem;
+    }
+}
+
+.drawer {
+    display: none;
+}
+
+@media only screen and (max-width: 767px) {
+    .drawer {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        height: 90vh;
+        width: 100%;
+        top: 10vh;
+        gap: 3rem;
+        position: absolute;
+        border-top: 1px solid rgb(228, 228, 228);
+        background: #fff;
+        z-index: 999;
+    }
+}
+
+.drawerList {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    width: 100%;
+    margin: 1rem;
+    gap: 0.1rem;
+}
+
+.drawerListItem {
+    box-shadow: rgba(241, 241, 241, 0.2) 0px 8px 24px;
+    display: flex;
+    align-items: center;
+    width: 85%;
+    justify-content:
+        space-between;
+    height: 4.5rem;
+}
+
+.drawerBtm {
+    bottom: 3rem;
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 3rem;
+}
+
+
+.drawerCredits {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 0.5rem;
+    justify-content: center;
+    flex-wrap: nowrap;
+}
+
+.drawerCreditsRow {
+    display: flex;
+    align-items: center;
+    gap: 2rem;
+    justify-content: center;
+    flex-wrap: nowrap;
+}
+
+.rights {
+    font-size: 0.6rem;
+}
+
+.highlight {
+    font-weight: 500;
+    color: rgb(0, 82, 204)
+}
+
+.logobtm {
+    display: flex;
+    height: 2rem;
 }
