--- a/frontend/src/components/Navbar/Navbar.module.css
+++ b/frontend/src/components/Navbar/Navbar.module.css
@@ -207,3 +207,22 @@
     display: flex;
     height: 2rem;
 }
+
+.notify{
+    display: flex;
+    font-size: 1.8rem;
+    margin-left: 1rem;
+    cursor: pointer;
+}
+
+.notifyMob{
+    display: none;
+}
+
+@media only screen and (max-width: 767px) {
+    .notifyMob{
+        display: block;
+        margin-right: 1.4rem;
+        font-size: 1.4rem;
+    }
+}
