--- a/frontend/src/components/Navbar/Navbar.module.css
+++ b/frontend/src/components/Navbar/Navbar.module.css
@@ -24,6 +24,7 @@
     align-items: center;
     display: flex;
     width: 100%;
+    position: relative;
 }
 
 @media only screen and (max-width: 767px) {
