--- a/frontend/src/components/Notification/Notification.module.css
+++ b/frontend/src/components/Notification/Notification.module.css
@@ -15,6 +15,25 @@
     align-items: start;
 }
 
+@media only screen and (max-width: 767px) {
+    .Container {
+        box-shadow: rgba(158, 158, 158, 0.24) 0px 3px 8px;
+        background-color: #ffffff;
+        position: absolute;
+        border-radius: 10px;
+        z-index: 9999;
+        right:0.1rem;
+        top: 4.3rem;
+        width: 90%;
+        object-fit: contain;
+        padding: 20px;
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+        align-items: start;
+    }
+}
+
 .Title{
     font-size: 1.3rem;
     font-weight: 500;
@@ -29,6 +48,20 @@
     flex-direction: column;
     justify-content: center;
     width: 100%;
+}
+
+@media only screen and (max-width: 767px) {
+    
+.NotificationBox{
+    height: 30rem;
+    align-items: center;
+    display: flex;
+    gap: 2rem;
+    flex-direction: column;
+    justify-content: center;
+    width: 100%;
+}
+
 }
 
 .nothingImg{
