--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -2,6 +2,7 @@
   margin: 0;
   padding: 0;
   /* overflow-x: hidden; */
+  -webkit-tap-highlight-color: transparent;
   font-family: 'Plus Jakarta Sans', sans-serif;
 }
 
