--- a/frontend/src/components/MemberList/MemberList.module.css
+++ b/frontend/src/components/MemberList/MemberList.module.css
@@ -6,6 +6,17 @@
     justify-content: center;
 }
 
+@media only screen and (max-width: 767px) {
+    .container {
+        display: flex;
+        grid-template-columns: repeat(3, 1fr);
+        gap: 1rem;
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+}
+
+
 .item {
     height: 23rem;
     padding: 8px;
@@ -17,6 +28,21 @@
     gap: 0.5rem;
     border-radius: 10px;
     box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+}
+
+@media only screen and (max-width: 767px) {
+    .item {
+        height: 26.4rem;
+        padding: 8px;
+        display: flex;
+        align-self: center;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        gap: 0.5rem;
+        border-radius: 10px;
+        box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+    }
 }
 
 .row{
@@ -45,4 +71,13 @@
     height: 300px;
     object-fit: cover;
     width: 300px;
+}
+
+@media only screen and (max-width: 767px) {
+    .memberImg {
+        border-radius: 8px;
+        height: 356px;
+        object-fit: cover;
+        width: 356px;
+    }
 }
