--- a/frontend/src/modules/ExecomPage/ExecomPage.module.css
+++ b/frontend/src/modules/ExecomPage/ExecomPage.module.css
@@ -17,6 +17,17 @@
     gap: 2rem;
 }
 
+@media only screen and (max-width: 767px) {
+    .wrap {
+        margin: 0rem;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        gap: 2rem;
+    }
+}
+
 .box{
     display: flex;
     flex-direction: column;
@@ -47,4 +58,14 @@
     color: 000;
     font-weight: 600;
     text-transform: capitalize;
+}
+
+@media only screen and (max-width: 767px) {
+    .title{
+        display: flex;
+        font-size: 1.2rem;
+        color: 000;
+        font-weight: 600;
+        text-transform: capitalize;
+    }
 }
