--- a/frontend/src/components/Footer/Footer.module.css
+++ b/frontend/src/components/Footer/Footer.module.css
@@ -1,11 +1,12 @@
 .Footer {
     display: flex;
-    border-top: 1px solid rgb(233, 233, 233);
+    border-top: 1px solid rgb(236, 236, 236);
     background-color: #fff;
 }
 
 @media only screen and (max-width: 767px) {
     .Footer {
+        margin-top: 4rem;
         display: flex;
         background-color: #fff;
     }
@@ -22,7 +23,7 @@
 @media only screen and (max-width: 767px) {
     .footerWrapper {
         width: 100%;
-        margin: 1rem 1rem;
+        margin: 2rem 1rem;
         display: flex;
         gap: 2rem;
         flex-direction: column;
