--- a/frontend/src/components/MemberList/MemberList.module.css
+++ b/frontend/src/components/MemberList/MemberList.module.css
@@ -22,11 +22,17 @@
     display: flex;
     align-self: center;
     flex-direction: column;
+    cursor: pointer;
+    transition: transform 0.2s ease-in-out;
     align-items: center;
     justify-content: center;
     gap: 0.5rem;
     border-radius: 10px;
     box-shadow: rgba(184, 184, 184, 0.2) 0px 7px 29px 0px;
+}
+.item:hover {
+    /* Move the image 5 pixels upwards */
+    transform: translateY(-6px);
 }
 
 @media only screen and (max-width: 767px) {
