--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -10,3 +10,16 @@ a{
   text-decoration: none;
   color: inherit;
 }
+
+*::-webkit-scrollbar {
+  width: 5px;
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: #0051ff;
+  border-radius: 5px;
+}
+
+*::-webkit-scrollbar-track:hover {
+  background-color: #10ff247c;
+}
