--- a/frontend/src/components/Navbar/Navbar.module.css
+++ b/frontend/src/components/Navbar/Navbar.module.css
@@ -62,7 +62,7 @@
     display: flex;
     align-items: center;
     justify-content: end;
-    gap:1.8rem;
+    gap:0.5rem;
     flex: 6;
     width: 100%;
     height: 100%;
@@ -79,8 +79,7 @@
     align-items: center;
     justify-content: center;
     height: 80%;
-    width: auto;
-    flex-wrap: nowrap;
+    width: 8rem;
     position: relative;
     cursor: pointer;
 }
